kubernetes/infra/core/argocd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-argocd
  namespace: argocd
spec:
  parentRefs:
    - name: kubelab
      namespace: gateway
      sectionName: https
  hostnames:
    - "argocd.kubelab.fi"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 443
