kubernetes/infra/core/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.kubelab.fi
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  name: https
            pathType: Prefix
            path: /
  tls:
    - secretName: argocd-server-tls
      hosts:
        - "argocd.kubelab.fi"
